# lib_hangman

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  lib_hangmanTargets.cmake  words.txt
docs/html/: dir_000001_000000.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  globals.html  graph_legend.html  unhangman_8cpp.html  unhangman_8cpp__incl.md5  unhangman_8h.html  unhangman_8h_source.html
docs/html/search/: all_4.js  all_5.js  pages_0.js  searchdata.js
documentation/html/: dir_000001_000000.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  globals.html  globals_func.html  graph_legend.html  hangman_8cpp.html  hangman_8cpp__incl.map  hangman_8cpp__incl.md5  hangman_8h.html  hangman_8h__dep__incl.map  hangman_8h__dep__incl.md5  hangman_8h__incl.map  hangman_8h__incl.md5  hangman_8h_source.html  hangmansolver_8cpp.html  hangmansolver_8cpp__incl.dot  hangmansolver_8cpp__incl.md5  index.html  unhangman_8cpp__incl.map  unhangman_8h.html  unhangman_8h__dep__incl.map  unhangman_8h__dep__incl.md5  unhangman_8h__incl.map  unhangman_8h__incl.md5
documentation/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  pages_0.js  searchdata.js
documentation/latex/: dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  files.tex  hangman_8cpp.tex  hangman_8cpp__incl.md5  hangman_8h.tex  hangman_8h__dep__incl.md5  hangman_8h__incl.md5  hangmansolver_8cpp.tex  hangmansolver_8cpp.tex.tmp  hangmansolver_8cpp__incl.dot  hangmansolver_8cpp__incl.md5  index.tex  refman.tex  unhangman_8cpp.tex  unhangman_8cpp__incl.md5  unhangman_8h.tex  unhangman_8h__dep__incl.md5  unhangman_8h__incl.md5
include/: hangman.h  hangmansolver.h  unhangman.h
src/: hangman.cpp  hangmansolver.cpp  unhangman.cpp
test/: main.cpp
tests/: basic_testing.cpp  contains.cpp  filters.cpp  frequency_counter.cpp  main.cpp  next_char.cpp  positions.cpp
